--- a/package.json
+++ b/package.json
@@ -1,31 +1,46 @@
 {
+      "version": "1.0.0",
+      "name": "testool",
+      "author": "matrixage",
+      "license": "MIT",
       "private": true,
+      "main": "src/pages/index.tsx",
+      "description": "A artifact for the test/interview/exam.",
+      "keywords": [
+            "test",
+            "interview",
+            "exam",
+            "react",
+            "js",
+            "umi",
+            "考试",
+            "面试",
+            "背题神器",
+            "背题"
+      ],
       "scripts": {
             "start": "umi dev",
             "build": "umi build",
-            "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
             "test": "umi-test",
             "test:coverage": "umi-test --coverage"
       },
-      "gitHooks": {
-            "pre-commit": "lint-staged"
-      },
-      "lint-staged": {
-            "*.{js,jsx,less,md,json}": [
-                  "prettier --write"
-            ],
-            "*.ts?(x)": [
-                  "prettier --parser=typescript --write"
-            ]
-      },
       "dependencies": {
-            "@umijs/preset-react": "1.x",
+            "@umijs/preset-react": "1.3.2",
             "@umijs/test": "^3.0.9",
-            "lint-staged": "^10.0.7",
-            "prettier": "^1.19.1",
+            "dva-model-extend": "^0.1.2",
+            "lodash": "^4.17.15",
+            "moment": "^2.24.0",
+            "qs": "^6.9.1",
             "react": "^16.12.0",
             "react-dom": "^16.12.0",
-            "umi": "^3.0.9",
-            "yorkie": "^2.0.0"
+            "react-helmet": "^5.2.1",
+            "store": "^2.0.12",
+            "umi": "^3.0.9"
+      },
+      "devDependencies": {
+            "@types/react-helmet": "^5.0.15",
+            "@types/store": "^2.0.2",
+            "babel-plugin-import": "^1.13.0",
+            "less-vars-to-js": "^1.3.0"
       }
 }
