--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "dependencies": {
             "@umijs/preset-react": "1.3.2",
             "@umijs/test": "^3.0.9",
+            "dexie": "^2.0.4",
             "dva-model-extend": "^0.1.2",
             "lodash": "^4.17.15",
             "moment": "^2.24.0",
@@ -34,6 +35,7 @@
             "react": "^16.12.0",
             "react-dom": "^16.12.0",
             "react-helmet": "^5.2.1",
+            "react-virtualized": "^9.21.2",
             "store": "^2.0.12",
             "umi": "^3.0.9"
       },
