--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
             "react": "^16.12.0",
             "react-dom": "^16.12.0",
             "react-helmet": "^5.2.1",
+            "react-markdown": "^4.3.1",
             "react-virtualized": "^9.21.2",
             "store": "^2.0.12",
             "umi": "^3.0.9"
@@ -43,6 +44,7 @@
             "@types/react-helmet": "^5.0.15",
             "@types/store": "^2.0.2",
             "babel-plugin-import": "^1.13.0",
-            "less-vars-to-js": "^1.3.0"
+            "less-vars-to-js": "^1.3.0",
+            "offline-plugin": "^5.0.7"
       }
 }
