--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
             "@types/store": "^2.0.2",
             "babel-plugin-import": "^1.13.0",
             "less-vars-to-js": "^1.3.0",
-            "offline-plugin": "^5.0.7"
+            "offline-plugin": "^5.0.7",
+            "umi-plugin-gh-pages": "^0.2.0"
       }
 }
