--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
       "author": "matrixage",
       "license": "MIT",
       "private": false,
-      "homepage": ".",
       "main": "src/pages/index/index.tsx",
       "description": "A artifact for the test/interview/exam.",
       "keywords": [
@@ -46,7 +45,6 @@
             "@types/store": "^2.0.2",
             "babel-plugin-import": "^1.13.0",
             "less-vars-to-js": "^1.3.0",
-            "offline-plugin": "^5.0.7",
-            "umi-plugin-gh-pages": "^0.2.0"
+            "offline-plugin": "^5.0.7"
       }
 }
