--- a/package.json
+++ b/package.json
@@ -43,10 +43,8 @@
       "devDependencies": {
             "@types/react-helmet": "^5.0.15",
             "@types/store": "^2.0.2",
-            "@umijs/babel-plugin-lock-core-js-3": "^3.0.12",
             "babel-plugin-import": "^1.13.0",
             "less-vars-to-js": "^1.3.0",
-            "offline-plugin": "^5.0.7",
-            "umi-plugin-gh-pages": "^0.2.0"
+            "offline-plugin": "^5.0.7"
       }
 }
