--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
             "@types/store": "^2.0.2",
             "babel-plugin-import": "^1.13.0",
             "less-vars-to-js": "^1.3.0",
-            "offline-plugin": "^5.0.7"
+            "offline-plugin": "^5.0.7",
+            "webpack-pwa-manifest": "^4.2.0"
       }
 }
