--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
             "moment": "^2.24.0",
             "qs": "^6.9.1",
             "react": "^16.12.0",
+            "react-bottom-scroll-listener": "^3.0.0",
             "react-dom": "^16.12.0",
             "react-helmet": "^5.2.1",
             "react-markdown": "^4.3.1",
@@ -43,6 +44,7 @@
       },
       "devDependencies": {
             "@types/react-helmet": "^5.0.15",
+            "@types/react-virtualized": "^9.21.8",
             "@types/store": "^2.0.2",
             "babel-plugin-import": "^1.13.0",
             "less-vars-to-js": "^1.3.0",
