--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
             "react-dom": "^16.12.0",
             "react-helmet": "^5.2.1",
             "react-markdown": "^4.3.1",
+            "react-syntax-highlighter": "^12.2.1",
             "react-virtualized": "^9.21.2",
             "recharts": "^1.8.5",
             "store": "^2.0.12",
@@ -45,6 +46,7 @@
       },
       "devDependencies": {
             "@types/react-helmet": "^5.0.15",
+            "@types/react-syntax-highlighter": "^11.0.4",
             "@types/react-virtualized": "^9.21.8",
             "@types/recharts": "^1.8.9",
             "@types/store": "^2.0.2",
