--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
             "@types/react-virtualized": "^9.21.8",
             "@types/recharts": "^1.8.9",
             "@types/store": "^2.0.2",
+            "antd-theme-webpack-plugin": "^1.3.1",
             "babel-plugin-import": "^1.13.0",
             "less-vars-to-js": "^1.3.0",
             "offline-plugin": "^5.0.7",
